# Miles-Ahead

./: CMakeLists.txt  README  README.md
src/: MidiEventQ.cpp  MidiFileIn.cpp  RtAudio.cpp  RtAudio.h  Stk.cpp  Stk.h  gfx.cpp  gfx.h  main.cpp
